@@ -3,7 +3,7 @@ package com.graphinout.reader.jgrapht;
 import com.graphinout.base.AbstractReaderTest;
 import com.graphinout.base.ReaderTests;
 import com.graphinout.base.gio.GioReader;
-import com.graphinout.base.validation.graphml.GraphmlValidator;
+import com.graphinout.base.cj.util.CjValidator;
 import com.graphinout.foundation.input.SingleInputSource;
 import com.graphinout.foundation.output.InMemoryOutputSink;
 import com.graphinout.foundation.output.OutputSink;
@@ -11,7 +11,6 @@ import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.slf4j.LoggerFactory.getLogger;
@@ -22,7 +21,7 @@ class Digraph6ReaderTest extends AbstractReaderTest {
 
     @Override
     protected List<GioReader> readersToTest() {
-        return Arrays.asList(new Digraph6Reader());
+        return List.of(new Digraph6Reader());
     }
 
     @Test
@@ -34,7 +33,7 @@ class Digraph6ReaderTest extends AbstractReaderTest {
             try {
                 ReaderTests.readResourceToSink(gioReader, resourcePath, outputSink);
                 String s = outputSink.getBufferAsUtf8String();
-                GraphmlValidator.isValidGraphml(SingleInputSource.of("parsed", s));
+                CjValidator.isValidCjCanonical( SingleInputSource.of("parsed", s));
                 log.info("Read:\n" + s);
             } catch (IOException e) {
                 throw new RuntimeException(e);
