@@ -1,18 +1,21 @@
 package com.graphinout.reader.tgf;
 
-import com.graphinout.base.gio.GioData;
-import com.graphinout.base.gio.GioDocument;
-import com.graphinout.base.gio.GioEdge;
-import com.graphinout.base.gio.GioEndpoint;
-import com.graphinout.base.gio.GioGraph;
-import com.graphinout.base.gio.GioNode;
+import com.graphinout.base.cj.document.CjDirection;
+import com.graphinout.base.cj.document.ICjDocument;
+import com.graphinout.base.cj.document.ICjEdgeChunk;
+import com.graphinout.base.cj.document.ICjEdgeChunkMutable;
+import com.graphinout.base.cj.document.ICjNodeChunkMutable;
+import com.graphinout.base.cj.stream.CjStream2CjWriter;
+import com.graphinout.base.cj.stream.ICjStream;
+import com.graphinout.base.cj.writer.CjWriter2CjDocumentWriter;
+import com.graphinout.base.gio.GioFileFormat;
 import com.graphinout.base.gio.GioReader;
-import com.graphinout.base.gio.GioWriter;
-import com.graphinout.base.reader.ContentError;
-import com.graphinout.base.reader.GioFileFormat;
+import com.graphinout.foundation.input.ContentError;
 import com.graphinout.foundation.input.InputSource;
+import com.graphinout.foundation.input.Location;
+import com.graphinout.foundation.input.Locator;
 import com.graphinout.foundation.input.SingleInputSource;
-import com.graphinout.foundation.xml.XmlFragmentString;
+import com.graphinout.foundation.util.IntRef;
 import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -20,6 +23,7 @@ import org.slf4j.LoggerFactory;
 import javax.annotation.Nullable;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
@@ -27,19 +31,24 @@ import java.util.Scanner;
 import java.util.Set;
 import java.util.function.Consumer;
 
+import static com.graphinout.foundation.util.IntRef.intRef;
+import static com.graphinout.foundation.util.Nullables.ifConsumerPresentAccept;
+
 public class TgfReader implements GioReader {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(TgfReader.class);
-    private static final String DELIMITER = " ";
-    private static final String HASH = "#";
-    private static final String LABEL = "label";
     public static final String FORMAT_ID = "tgf";
     public static final GioFileFormat FORMAT = new GioFileFormat(FORMAT_ID, "Trivial Graph Format", ".tgf");
+    private static final Logger log = LoggerFactory.getLogger(TgfReader.class);
+    private static final String DELIMITER_REGEX = "\\s+";
+    private static final String SECTION_MARKER = "#";
     private @Nullable Consumer<ContentError> errorHandler;
 
-    @Override
-    public void errorHandler(Consumer<ContentError> errorHandler) {
-        this.errorHandler = errorHandler;
+    public static ICjDocument parseTgfToCjDocument(SingleInputSource inputSource) throws IOException {
+        TgfReader tgfReader = new TgfReader();
+        CjWriter2CjDocumentWriter cj2document = new CjWriter2CjDocumentWriter();
+        ICjStream cjStream2cj = new CjStream2CjWriter(cj2document);
+        tgfReader.read(inputSource, cjStream2cj);
+        return cj2document.resultDoc();
     }
 
     @Override
@@ -48,7 +57,7 @@ public class TgfReader implements GioReader {
     }
 
     @Override
-    public void read(InputSource inputSource, GioWriter writer) throws IOException {
+    public void read(InputSource inputSource, ICjStream writer) throws IOException {
         if (inputSource.isMulti()) {
             throw new IllegalArgumentException("Cannot handle multi-sources");
         }
@@ -57,6 +66,9 @@ public class TgfReader implements GioReader {
         String content = IOUtils.toString(singleInputSource.inputStream(), StandardCharsets.UTF_8);
 
         if (content.isEmpty()) {
+            // Emit empty document (no graphs) for empty TGF content to allow exact empty roundtrip
+            ifConsumerPresentAccept(errorHandler, ContentError.of(ContentError.ErrorLevel.Warn, "Content is empty"));
+            writer.document(writer.createDocumentChunk());
             return;
         }
         try (Scanner scanner = new Scanner(content)) {
@@ -64,87 +76,119 @@ public class TgfReader implements GioReader {
         }
     }
 
-    private void ensureNodesExist(final String[] edgeParts, final GioWriter writer, final Set<String> nodesCreatedSet) throws IOException {
-        for (String nodeId : Arrays.asList(edgeParts[0], edgeParts[1])) {
+    @Override
+    public void setContentErrorHandler(Consumer<ContentError> errorHandler) {
+        this.errorHandler = errorHandler;
+    }
+
+    /** auto-create nodes if they don't exist */
+    private void ensureNodesExist(final String[] edgeParts, ICjStream writer, final Set<String> nodesCreatedSet, Locator locator) {
+        for (String nodeId : List.of(edgeParts[0], edgeParts[1])) {
             if (!nodesCreatedSet.contains(nodeId)) {
-                LOGGER.warn("No specified nodes found in the file for edge: " + Arrays.toString(edgeParts) + ". Required nodes have been created.");
-                writer.startNode(GioNode.builder().id(nodeId).build());
-                writer.endNode(null);
+                String msg = String.format("Auto-create node '%s' found in the file for edge: %s", nodeId, Arrays.toString(edgeParts));
+                sendIssue(ContentError.ErrorLevel.Warn, msg, locator);
+                ICjNodeChunkMutable nodeChunk = writer.createNodeChunk();
+                nodeChunk.id(nodeId);
+                writer.node(nodeChunk);
                 nodesCreatedSet.add(nodeId);
             }
         }
     }
 
-    private void handleWarnings(final boolean edges, final boolean nodes) {
-        if (!edges) {
-            if (!nodes) {
-                if (errorHandler != null) {
-                    errorHandler.accept(new ContentError(ContentError.ErrorLevel.Warn, "No nodes found in file", null));
-                }
-            } else {
-                LOGGER.warn("No edges found in the file.");
-            }
+    private void processEdge(final String rawLine, final ICjStream writer, final Set<String> nodesCreatedSet, Locator locator, Consumer<ICjEdgeChunk> edgeConsumer) throws IOException {
+        String line = rawLine.trim();
+        if (line.isEmpty()) {
+            sendIssue(ContentError.ErrorLevel.Info, "Skipping empty edge", locator);
+            return;
         }
+        String[] edgeParts = line.split(DELIMITER_REGEX, 3);
+        if (edgeParts.length < 2) {
+            sendIssue(ContentError.ErrorLevel.Info, "Skipping invalid edge", locator);
+            return; // invalid edge line
+        }
+        ensureNodesExist(edgeParts, writer, nodesCreatedSet, locator);
+
+        ICjEdgeChunkMutable edgeChunk = writer.createEdgeChunk();
+        //source
+        edgeChunk.addEndpoint(ep -> ep.node(edgeParts[0]).direction(CjDirection.IN));
+        //target
+        edgeChunk.addEndpoint(ep -> ep.node(edgeParts[1]).direction(CjDirection.OUT));
+
+        if (edgeParts.length == 3 && !edgeParts[2].isBlank()) {
+            edgeChunk.addLabelWithoutLanguage(edgeParts[2]);
+        }
+        edgeConsumer.accept(edgeChunk);
     }
 
-    private void processEdge(final String line, final GioWriter writer, final Set<String> nodesCreatedSet) throws IOException {
-        LOGGER.info("--- edges:");
-        String[] edgeParts = line.split(DELIMITER, 3);
-        GioEndpoint sourceEndpoint = GioEndpoint.builder().node(edgeParts[0]).build();
-        GioEndpoint targetEndpoint = GioEndpoint.builder().node(edgeParts[1]).build();
+    private void processFileContent(final Scanner scanner, final ICjStream writer) throws IOException {
+        boolean foundEdges = false;
+        boolean foundNodes = false;
 
-        List<GioEndpoint> endpointList = Arrays.asList(sourceEndpoint, targetEndpoint);
-
-        if (edgeParts.length == 2 || edgeParts.length == 3) {
-            ensureNodesExist(edgeParts, writer, nodesCreatedSet);
-            GioEdge gioEdge = GioEdge.builder().endpoints(endpointList).build();
-            if (edgeParts.length == 3) {
-                GioData.builder().xmlValue(XmlFragmentString.ofPlainText(edgeParts[2])).build();
-            }
-            writer.startEdge(gioEdge);
-            writer.endEdge();
-        }
-    }
-
-    private void processFileContent(final Scanner scanner, final GioWriter writer) throws IOException {
-        boolean edges = false;
-        boolean nodes = false;
-
-        writer.startDocument(GioDocument.builder().build());
-        writer.startGraph(GioGraph.builder().build());
+        writer.documentStart(writer.createDocumentChunk());
+        writer.graphStart(writer.createGraphChunk());
 
         Set<String> nodesCreatedSet = new HashSet<>();
 
+        List<ICjEdgeChunk> edgeBuffer = new ArrayList<>();
+        IntRef lineNumber = intRef(0);
+        Locator locator = () -> Location.of(lineNumber.value, 1);
         while (scanner.hasNextLine()) {
             String line = scanner.nextLine();
-            if (line.contains(HASH)) {
-                edges = true;
+            lineNumber.value++;
+            String trimmed = line.trim();
+            if (trimmed.isEmpty()) {
+                continue; // skip empty lines
+            }
+            if (trimmed.equals(SECTION_MARKER)) {
+                foundEdges = true;
                 continue;
             }
-            if (!edges) {
-                nodes = true;
-                processNode(line, writer, nodesCreatedSet);
+            if (!foundEdges) {
+                foundNodes = true;
+                processNode(line, writer, nodesCreatedSet, locator);
             } else {
-                processEdge(line, writer, nodesCreatedSet);
+                processEdge(line, writer, nodesCreatedSet, locator, edgeBuffer::add);
             }
         }
 
-        writer.endGraph(null);
-        writer.endDocument();
+        if (!foundNodes) {
+            ifConsumerPresentAccept(errorHandler, ContentError.of(ContentError.ErrorLevel.Warn, "Content contains no nodes"));
+        }
+        if (!foundEdges) {
+            ifConsumerPresentAccept(errorHandler, ContentError.of(ContentError.ErrorLevel.Warn, "Content contains no edges"));
+        }
+        edgeBuffer.forEach(writer::edge);
 
-        handleWarnings(edges, nodes);
+        writer.graphEnd();
+        writer.documentEnd();
     }
 
-    private void processNode(final String line, final GioWriter writer, final Set<String> nodesCreatedSet) throws IOException {
-        LOGGER.info("--- nodes:");
-        String[] nodeParts = line.split(DELIMITER);
-        if (!nodesCreatedSet.contains(nodeParts[0])) {
-            nodesCreatedSet.add(nodeParts[0]);
-            writer.startNode(GioNode.builder().id(nodeParts[0]).build());
-            GioData.GioDataBuilder gioDataBuilder = GioData.builder().key(LABEL);
-            writer.data(gioDataBuilder.xmlValue(XmlFragmentString.ofPlainText(nodeParts[1])).build());
-            writer.endNode(null);
+    private void processNode(final String rawLine, final ICjStream writer, final Set<String> nodesCreatedSet, Locator locator) {
+        String line = rawLine.trim();
+        if (line.isEmpty()) return;
+        String[] nodeParts = line.split(DELIMITER_REGEX, 2);
+        if (nodeParts.length == 0 || nodeParts[0].isBlank()) {
+            sendIssue(ContentError.ErrorLevel.Info, "Skipping empty node", locator);
+            return;
         }
+        String nodeId = nodeParts[0];
+        boolean isNew = nodesCreatedSet.add(nodeId);
+        if (!isNew) {
+            sendIssue(ContentError.ErrorLevel.Warn, "Skipping duplicate node ID: " + nodeId, locator);
+        } else {
+            ICjNodeChunkMutable nodeChunk = writer.createNodeChunk();
+            nodeChunk.id(nodeId);
+            // add optional label
+            if (nodeParts.length == 2 && !nodeParts[1].isBlank()) {
+                nodeChunk.addLabelWithoutLanguage(nodeParts[1]);
+            }
+            writer.nodeStart(nodeChunk);
+            writer.nodeEnd();
+        }
+    }
+
+    private void sendIssue(ContentError.ErrorLevel errorLevel, String msg, Locator locator) {
+        ifConsumerPresentAccept(errorHandler, ContentError.of(errorLevel, msg, locator.location()));
     }
 
 }
